--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <i class="bi bi-tiktok"></i>
                 <span>TikTok</span>
             </div>
-            <div class="boton" onclick="window.open('http://www.cosmeticosnovax.com/', '_blank')" style="cursor: pointer;">
+            <div class="boton" onclick="window.open('https://cosmeticosnovax.odoo.com/', '_blank')" style="cursor: pointer;">
                 <i class="bi bi-globe"></i>
                 <span>Página Web</span>
             </div>
